# nanodet_openvino

./: CMakeLists.txt  README.md  detector.cpp  detector.h  main.cpp
models/: nanodet.xml
